[udpate] list of countries

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<script type="text/javascript" src="//webix.io/dev/webix/core/white-skin-preview/codebase/webix.js"></script>
 	<link rel="stylesheet" type="text/css" href="//webix.io/dev/webix/core/white-skin-preview/codebase/webix.css">
 
+	<link rel="icon" type="image/png" href="common/favicon.ico">
+
 	<!-- Material Design Icons -->
 	<link rel="stylesheet" type="text/css" href="//cdn.materialdesignicons.com/2.7.94/css/materialdesignicons.css">
 
