--- a/index.production.html
+++ b/index.production.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<script>
-		if (!webix.env.touch && webix.ui.scrollSize && webix.CustomScroll)
+		if (!webix.env.touch && webix.env.scrollSize && webix.CustomScroll)
 			webix.CustomScroll.init();
 			
 		webix.protoUI({
