[fix] unnecessary border above navbar

--- a/index.production.html
+++ b/index.production.html
@@ -35,7 +35,7 @@
 
 		webix.ready(function(){
 			webix.ui({
-				rows:[
+				type:"clean", rows:[
 					{ view:"geo-explorer-demo" },
 					{ view:"navbar", value:"geo-explorer" }
 				]
